[package]
name = "tweet-broadcast"
version = "0.1.1"
authors = ["Wonwoo Choi <chwo9843@gmail.com>"]
edition = "2021"

[dependencies]
async-stream = "0.3.2"
bytes = "1.1.0"
futures-util = "0.3.17"
serde_json = "1.0.69"
serde_v8 = "0.19.0"
thiserror = "1.0.30"
v8 = "0.34.0"

[dependencies.chrono]
version = "0.4.19"
features = ["serde"]

[dependencies.reqwest]
version = "0.11.6"
default-features = false
features = ["rustls-tls", "gzip", "brotli", "stream"]

[dependencies.sentry]
version = "0.23.0"
default-features = false
features = ["backtrace", "contexts", "panic", "reqwest", "rustls"]

[dependencies.serde]
version = "1.0.130"
features = ["derive"]

[dependencies.tokio]
version = "1.13.0"
default-features = false
features = ["rt-multi-thread", "fs", "signal", "io-util", "time", "macros", "parking_lot"]

[dependencies.url]
version = "2.2.2"
features = ["serde"]

[profile.release]
debug = 1  # line information only
lto = true
