[package]
name = "tweet-broadcast"
version = "0.3.1"
authors = ["Wonwoo Choi <chwo9843@gmail.com>"]
license = "MIT"
edition = "2021"

[dependencies]
base64 = "0.13.0"
chrono = "0.4.19"
env_logger = "0.9.0"
eyre = "0.6.6"
futures-util = "0.3.17"
log = "0.4.14"
ring = "0.16.20"
serde_json = "1.0.69"
thiserror = "1.0.30"
toml = "0.5.8"
v8 = "0.34.0"

[dependencies.clap]
version = "3.0.6"
default-features = false
features = ["std", "color", "derive", "env"]

[dependencies.reqwest]
version = "0.11.6"
default-features = false
features = ["rustls-tls", "gzip", "brotli", "stream"]

[dependencies.sentry]
version = "0.23.0"
default-features = false
features = ["backtrace", "contexts", "panic", "reqwest", "rustls"]

[dependencies.serde]
version = "1.0.130"
features = ["derive"]

[dependencies.strum]
version = "0.23.0"
features = ["derive"]

[dependencies.tokio]
version = "1.13.0"
default-features = false
features = ["rt-multi-thread", "fs", "signal", "io-util", "time", "macros", "parking_lot"]

[dependencies.tweet-discord]
path = "../tweet-discord"

[dependencies.tweet-fetch]
path = "../tweet-fetch"

[dependencies.tweet-model]
path = "../tweet-model"

[dependencies.tweet-route]
path = "../tweet-route"
