[package]
name = "tweet-discord"
version = "0.3.1"
authors = ["Wonwoo Choi <chwo9843@gmail.com>"]
license = "MIT"
edition = "2021"

[dependencies]
futures-util = "0.3.17"
log = "0.4.14"
serde_json = "1.0.69"

[dependencies.reqwest]
version = "0.11.6"
default-features = false
features = ["rustls-tls", "gzip", "brotli"]

[dependencies.serde]
version = "1.0.130"
features = ["derive"]

[dependencies.tokio]
version = "1.13.0"
default-features = false
features = ["rt-multi-thread", "time", "parking_lot"]

[dependencies.tweet-model]
path = "../tweet-model"
