[package]
name = "tweet-fetch"
version = "0.3.0"
authors = ["Wonwoo Choi <chwo9843@gmail.com>"]
license = "MIT"
edition = "2021"

[dependencies]
async-stream = "0.3.2"
bytes = "1.1.0"
futures-util = "0.3.17"
log = "0.4.14"
serde_json = "1.0.69"
thiserror = "1.0.30"

[dependencies.reqwest]
version = "0.11.6"
default-features = false
features = ["rustls-tls", "gzip", "brotli", "stream"]

[dependencies.serde]
version = "1.0.130"
features = ["derive"]

[dependencies.tokio]
version = "1.13.0"
default-features = false
features = ["io-util", "time", "parking_lot"]

[dependencies.tweet-model]
path = "../tweet-model"

[dependencies.tweet-route]
path = "../tweet-route"
