[package]
name = "tweet-fetch"
version = "0.4.0"
authors = ["Wonwoo Choi <chwo9843@gmail.com>"]
license = "MIT"
edition = "2021"

[dependencies]
bytes = "1.1.0"
futures-util = "0.3.17"
log = "0.4.14"
thiserror = "1.0.30"

[dependencies.async-stream]
version = "0.3.2"
optional = true

[dependencies.reqwest]
version = "0.11.6"
default-features = false
features = ["rustls-tls", "gzip", "brotli", "stream"]

[dependencies.serde_json]
version = "1.0.69"
optional = true

[dependencies.tokio]
version = "1.13.0"
default-features = false
features = ["io-util", "time", "parking_lot"]

[dependencies.tweet-model]
path = "../tweet-model"

[dependencies.tweet-route]
path = "../tweet-route"

[features]
default = ["list", "search", "stream", "user"]
list = []
search = []
stream = ["async-stream", "serde_json"]
user = []
